# xinfo

./: AUTHORS  COPYING  configure.ac
packaging/: xinfo.spec
src/: Makefile.am  wininfo.c  xinfo.c  xinfo.h
